--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
   <body>
     <!-- First Screen -->
-    <div class="h-screen bg-linear-to-b from-indigo-50 to-blue-200">
+    <div class="h-screen">
       <!-- Navbar Start-->
-      <div class="bg-white h-20 flex justify-center items-center sticky z-10">
+      <div class="bg-white h-20 flex justify-center items-center sticky z-40">
         <nav class="container mx-auto flex justify-between items-center">
           <h3 class="text-2xl">ELTAYEB's PORTFOLIO</h3>
           <ul class="hidden md:flex gap-3">
@@ -49,68 +49,78 @@
           <!-- Hamburger -->
           <div
             id="hamburger"
-            class="flex flex-col gap-1 md:hidden cursor-pointer group transition duration-150 z-30"
+            class="flex flex-col gap-1 md:hidden cursor-pointer group transition duration-150 z-50 relative"
           >
             <div class="h-0.5 w-5 bg-gray-600 group-hover:bg-gray-400"></div>
             <div class="h-0.5 w-5 bg-gray-600 group-hover:bg-gray-400"></div>
             <div class="h-0.5 w-5 bg-gray-600 group-hover:bg-gray-400"></div>
-          </div>
-          <!-- Drop Down Menu -->
-          <div
-            id="dropdown"
-            class="absolute hidden top-0 left-0 z-20 bg-indigo-900 w-full h-72 flex justify-center items-center rounded-b-2xl"
-          >
-            <ul class="flex flex-col gap-3">
-              <li class="text-gray-200 hover:text-gray-50 font-semibold">
-                <a href="#home">HOME</a>
-              </li>
-              <li class="text-gray-200 hover:text-gray-50 font-semibold">
-                <a href="#about">ABOUT ME</a>
-              </li>
-              <li class="text-gray-200 hover:text-gray-50 font-semibold">
-                <a href="#skills">SKILLS</a>
-              </li>
-              <li class="text-gray-200 hover:text-gray-50 font-semibold">
-                <a href="#porfolio">PORTFOLIO</a>
-              </li>
-              <li class="text-gray-200 hover:text-gray-50 font-semibold">
-                <a href="#contact">CONTACT</a>
-              </li>
-              <li>
-                <!-- darkmode image -->
-                <div class="cursor-pointer flex justify-center">
-                  <img
-                    class="w-6 mx-auto -translate-x-1"
-                    src="./images/moon.png"
-                    alt="img"
-                  />
-                </div>
-              </li>
-            </ul>
           </div>
         </nav>
       </div>
       <!-- Navbar End-->
 
+      <!-- Drop Down Menu -->
+      <div
+        id="dropdown"
+        class="absolute hidden top-0 left-0 z-40 bg-indigo-900 w-full h-72 flex justify-center items-center rounded-b-2xl"
+      >
+        <div
+          class="text-white absolute top-5 right-5 cursor-pointer font-bold"
+          id="btn-close"
+        >
+          X
+        </div>
+        <ul class="flex flex-col gap-3">
+          <li class="text-gray-200 hover:text-gray-50 font-semibold">
+            <a href="#home">HOME</a>
+          </li>
+          <li class="text-gray-200 hover:text-gray-50 font-semibold">
+            <a href="#about">ABOUT ME</a>
+          </li>
+          <li class="text-gray-200 hover:text-gray-50 font-semibold">
+            <a href="#skills">SKILLS</a>
+          </li>
+          <li class="text-gray-200 hover:text-gray-50 font-semibold">
+            <a href="#porfolio">PORTFOLIO</a>
+          </li>
+          <li class="text-gray-200 hover:text-gray-50 font-semibold">
+            <a href="#contact">CONTACT</a>
+          </li>
+          <li>
+            <!-- darkmode image -->
+            <div class="cursor-pointer flex justify-center">
+              <img
+                class="w-6 mx-auto -translate-x-1"
+                src="./images/moon.png"
+                alt="img"
+              />
+            </div>
+          </li>
+        </ul>
+      </div>
+
       <!-- Hero Start -->
-      <div class="relative h-[calc(100vh-80px)] w-full">
+      <div
+        class="relative h-5/12 md:h-[calc(100vh-80px)] w-full bg-linear-to-b from-indigo-50 to-blue-200"
+        id="home"
+      >
         <!-- Left Text -->
         <div class="absolute top-1/4 left-12 md:left-24 z-10">
-          <span class="text-2xl md:text-4xl font-bold text-gray-700">
+          <span class="text-lg md:text-4xl font-bold text-gray-700">
             FullStack Developer
           </span>
           <p
             id="auto-text"
-            class="text-xl md:text-2xl text-red-400 font-bold mt-2"
+            class="text-lg md:text-2xl text-red-400 font-bold mt-2"
           ></p>
         </div>
 
         <!-- Image at bottom left -->
         <div
-          class="absolute bottom-0 left-3/12 h-[600px] w-[600px] bg-linear-to-b from-indigo-900 to-indigo-200 rounded-full overflow-hidden z-0"
+          class="absolute -right-10 bottom-0 w-[300px] h-[300px] md:bottom-0 md:left-3/12 md:h-[600px] md:w-[600px] md:bg-linear-to-b md:from-indigo-900 md:to-indigo-200 md:rounded-full overflow-hidden z-0"
         >
           <img
-            class="w-[600px] absolute bottom-0"
+            class="w-[300px] md:w-[600px] absolute bottom-0"
             src="./images/Eltayeb.png"
             alt="Eltayeb"
           />
@@ -118,7 +128,7 @@
 
         <!-- Right Element -->
         <div
-          class="absolute top-1/3 right-12 w-[400px] bg-gray-100 rounded-lg flex flex-col gap-3 p-3"
+          class="absolute hidden md:block md:top-1/3 md:right-12 md:w-[400px] bg-gray-100 rounded-lg flex flex-col gap-3 p-3"
         >
           <h1 class="text-2xl font-bold">Hi, I'm Eltayeb</h1>
           <p class="text-gray-500">
