--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <!-- Drop Down Menu -->
       <div
         id="dropdown"
-        class="absolute hidden top-0 left-0 z-40 bg-indigo-900 w-full h-72 flex justify-center items-center rounded-b-2xl"
+        class="absolute hidden top-0 left-0 z-40 bg-indigo-900 w-full h-72 rounded-b-2xl"
       >
         <div
           class="text-white absolute top-5 right-5 cursor-pointer font-bold"
@@ -128,7 +128,7 @@
 
         <!-- Right Element -->
         <div
-          class="absolute hidden md:block md:top-1/3 md:right-12 md:w-[400px] bg-gray-100 rounded-lg flex flex-col gap-3 p-3"
+          class="absolute hidden lg:top-1/3 lg:right-12 lg:w-[400px] bg-gray-100 rounded-lg lg:flex flex-col gap-3 p-3"
         >
           <h1 class="text-2xl font-bold">Hi, I'm Eltayeb</h1>
           <p class="text-gray-500">
@@ -145,6 +145,57 @@
       </div>
 
       <!-- Hero End -->
+
+      <!-- About Start -->
+      <div
+        class="mt-20 w-5/6 mx-auto flex flex-col gap-3 md:flex-row"
+        id="about"
+      >
+        <!-- left  -->
+        <div class="w-5/6 mx-auto md:w-full relative order-last md:order-first">
+          <img
+            class="mt-10 w-full mx-auto rounded-full md:absolute md:top-0 md:left-0"
+            src="./images/Eltayeb2.jpg"
+            alt="eltayeb image"
+          />
+        </div>
+
+        <!-- right -->
+        <div class="flex flex-col gap-3">
+          <h3 class="mt-15 text-lg font-semibold text-indigo-600 md:lg">
+            ABOUT ME
+          </h3>
+          <p class="text-gray-500">
+            Full Stack Developer with a strong backend focus, experienced in
+            building scalable web applications using Node.js, Express.js, MySQL,
+            and Vue.js. Passionate about clean code, performance optimization,
+            and delivering user-centered solutions. Able to handle both frontend
+            and backend challenges efficiently.
+          </p>
+          <h2 class="text-lg text-gray-500">Vue.js</h2>
+          <div class="w-full h-1.5 bg-gray-300 rounded-md">
+            <div class="w-4/6 h-1.5 bg-indigo-500 rounded-md"></div>
+          </div>
+          <h2 class="text-lg text-gray-500">Tailwind CSS</h2>
+          <div class="w-full h-1.5 bg-gray-300 rounded-md">
+            <div class="w-3/6 h-1.5 bg-indigo-500 rounded-md"></div>
+          </div>
+          <h2 class="text-lg text-gray-500">Express.js</h2>
+          <div class="w-full h-1.5 bg-gray-300 rounded-md">
+            <div class="w-5/6 h-1.5 bg-indigo-500 rounded-md"></div>
+          </div>
+          <h2 class="text-lg text-gray-500">MySQL</h2>
+          <div class="w-full h-1.5 bg-gray-300 rounded-md">
+            <div class="w-4/6 h-1.5 bg-indigo-500 rounded-md"></div>
+          </div>
+          <h2 class="text-lg text-gray-500">MongoDB</h2>
+          <div class="w-full h-1.5 bg-gray-300 rounded-md">
+            <div class="w-3/6 h-1.5 bg-indigo-500 rounded-md"></div>
+          </div>
+        </div>
+      </div>
+
+      <!-- About End -->
     </div>
     <script src="./app.js"></script>
     <script src="./autotyping.js"></script>
