--- a/index.html
+++ b/index.html
@@ -15,16 +15,25 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
       rel="stylesheet"
     />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <title>Eltayeb Ibrahim - FullStack Developer</title>
   </head>
 
-  <body>
+  <body
+    class="transition-colors duration-200 bg-[#EEE] dark:bg-gray-800 dark:text-white"
+  >
     <!-- First Screen -->
-    <div class="h-screen">
+    <div class="h-screen dark:bg-gray-800 dark:text-white">
       <!-- Navbar Start-->
-      <div class="bg-white h-20 flex justify-center items-center sticky z-40">
+      <div
+        class="bg-white h-20 flex justify-center items-center sticky z-40 dark:bg-gray-800 dark:text-white"
+      >
         <nav class="container mx-auto flex justify-between items-center">
-          <h3 class="text-2xl">ELTAYEB's PORTFOLIO</h3>
+          <h3 class="text-2xl dark:text-white">ELTAYEB's PORTFOLIO</h3>
           <ul class="hidden md:flex gap-3">
             <li class="text-gray-500 hover:text-gray-400 font-semibold">
               <a href="#home">HOME</a>
@@ -33,7 +42,7 @@
               <a href="#about">ABOUT ME</a>
             </li>
             <li class="text-gray-500 hover:text-gray-400 font-semibold">
-              <a href="#porfolio">PORTFOLIO</a>
+              <a href="#portfolio">PORTFOLIO</a>
             </li>
             <li class="text-gray-500 hover:text-gray-400 font-semibold">
               <a href="#contact">CONTACT</a>
@@ -41,7 +50,12 @@
           </ul>
           <!-- darkmode image -->
           <div class="hidden cursor-pointer md:block">
-            <img class="w-6" src="./images/moon.png" alt="img" />
+            <img
+              class="w-6"
+              src="./images/moon.png"
+              alt="img"
+              onclick="toggleDarkMode()"
+            />
           </div>
           <!-- Hamburger -->
           <div
@@ -68,16 +82,28 @@
           X
         </div>
         <ul class="flex flex-col gap-3">
-          <li class="text-gray-200 hover:text-gray-50 font-semibold">
+          <li
+            class="text-gray-200 hover:text-gray-50 font-semibold"
+            onclick="toggleNavbar()"
+          >
             <a href="#home">HOME</a>
           </li>
-          <li class="text-gray-200 hover:text-gray-50 font-semibold">
+          <li
+            class="text-gray-200 hover:text-gray-50 font-semibold"
+            onclick="toggleNavbar()"
+          >
             <a href="#about">ABOUT ME</a>
           </li>
-          <li class="text-gray-200 hover:text-gray-50 font-semibold">
-            <a href="#porfolio">PORTFOLIO</a>
+          <li
+            class="text-gray-200 hover:text-gray-50 font-semibold"
+            onclick="toggleNavbar()"
+          >
+            <a href="#portfolio">PORTFOLIO</a>
           </li>
-          <li class="text-gray-200 hover:text-gray-50 font-semibold">
+          <li
+            class="text-gray-200 hover:text-gray-50 font-semibold"
+            onclick="toggleNavbar()"
+          >
             <a href="#contact">CONTACT</a>
           </li>
           <li>
@@ -87,6 +113,7 @@
                 class="w-6 mx-auto -translate-x-1"
                 src="./images/moon.png"
                 alt="img"
+                onclick="toggleDarkMode()"
               />
             </div>
           </li>
@@ -95,12 +122,14 @@
 
       <!-- Hero Start -->
       <div
-        class="relative h-5/12 md:h-[calc(100vh-80px)] w-full bg-linear-to-b from-indigo-50 to-blue-200"
+        class="relative h-5/12 md:h-[calc(100vh-80px)] w-full bg-linear-to-b from-indigo-50 to-blue-200 dark:from-gray-600 dark:to-gray-800"
         id="home"
       >
         <!-- Left Text -->
         <div class="absolute top-1/4 left-12 md:left-24 z-10">
-          <span class="text-lg md:text-4xl font-bold text-gray-700">
+          <span
+            class="text-lg md:text-4xl font-bold text-gray-700 dark:text-white"
+          >
             FullStack Developer
           </span>
           <p
@@ -122,7 +151,7 @@
 
         <!-- Right Element -->
         <div
-          class="absolute hidden lg:top-1/3 lg:right-12 lg:w-[400px] bg-gray-100 rounded-lg lg:flex flex-col gap-3 p-3"
+          class="absolute hidden lg:top-1/3 lg:right-12 lg:w-[400px] bg-gray-100 rounded-lg lg:flex flex-col gap-3 p-3 dark:bg-gray-800 dark:text-white"
         >
           <h1 class="text-2xl font-bold">Hi, I'm Eltayeb</h1>
           <p class="text-gray-500">
@@ -236,6 +265,7 @@
       <!-- Contact Start -->
       <div
         class="mt-20 flex flex-col gap-3 justify-center items-center w-5/6 mx-auto"
+        id="contact"
       >
         <h3 class="mt-15 text-lg font-semibold text-indigo-600 text-center">
           CONTACT
@@ -297,13 +327,15 @@
           <p class="text-white hidden md:block">
             © 2025. Design by Eltayeb Ibrahim.
           </p>
-          <div class="flex justify-center items-center gap-0">
-            <a href="https://www.linkedin.com/in/eltayeb-ibrahim/">
-              <img
-                class="w-3/6"
-                src="./images/linkedin.png"
-                alt="linkedin logo"
-              />
+          <div class="flex justify-center items-center gap-2">
+            <a
+              href="https://www.linkedin.com/in/eltayeb-ibrahim/"
+              target="_blank"
+            >
+              <i class="fa-brands fa-lg fa-linkedin text-white"></i>
+            </a>
+            <a href="https://github.com/abuomerSD" target="_blank">
+              <i class="fa-brands fa-lg fa-github text-white"></i>
             </a>
           </div>
         </div>
